Use target account's commodity instead of base currency

When importing new transactions, use the target account's commodity
(which is set to target account's currency) since it may differ from the
base currency.

BUG: 419974
FIXED-IN: 5.0.9

(cherry picked from commit 181da28c988ee25f125b37b14aae74b6de9f43a5)